# embedded_labor

./: .gitignore  CMakeLists.txt  async_dma.txt  embedded  main  main.cpp  main_old  main_old.cpp  perfbench  perfbench.cpp
.cmake/api/v1/reply/: cache-v2-cc3f297570b3c84ecb09.json  cmakeFiles-v1-6d40eade453c237656fc.json  codemodel-v2-a2d6c640a35f61da9bde.json  index-2024-04-17T13-52-44-0715.json  target-embedded-Debug-6d0f59359162a8cb6801.json  toolchains-v1-36f09d995f4f9c70e6cb.json
doc/: doc.md
main.dSYM/Contents/Resources/DWARF/: main
